--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,7 +23,8 @@
     "next": "14.2.5",
     "postcss": "8.4.39",
     "react": "18.3.1",
-    "react-barcode-scanner": "4.0.0",
+  "react-barcode-scanner": "4.0.0",
+  "react-beautiful-dnd": "13.1.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.52.0",
     "recharts": "2.9.0",
@@ -36,6 +37,7 @@
   "devDependencies": {
   "eslint": "9.11.1",
     "eslint-config-next": "14.2.5",
-    "typescript": "5.7.2"
+    "typescript": "5.7.2",
+    "@types/react-beautiful-dnd": "13.1.8"
   }
 }
