--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,26 +18,28 @@
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
     "class-variance-authority": "0.7.0",
-  "lucide-react": "0.378.0",
     "framer-motion": "11.0.24",
+    "lucide-react": "0.378.0",
     "next": "14.2.5",
     "postcss": "8.4.39",
     "react": "18.3.1",
-  "react-barcode-scanner": "4.0.0",
-  "react-beautiful-dnd": "13.1.1",
+    "react-barcode-scanner": "4.0.0",
+    "react-beautiful-dnd": "13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.52.0",
     "recharts": "2.9.0",
     "socket.io-client": "4.7.5",
     "tailwind-merge": "2.4.0",
     "tailwindcss": "3.4.7",
-    "zustand": "4.5.4",
-    "zod": "3.23.8"
+    "zod": "3.23.8",
+    "zustand": "4.5.4"
   },
   "devDependencies": {
-  "eslint": "9.11.1",
+    "@types/react-beautiful-dnd": "13.1.8",
+    "eslint": "9.11.1",
     "eslint-config-next": "14.2.5",
-    "typescript": "5.7.2",
-    "@types/react-beautiful-dnd": "13.1.8"
+    "typescript": "5.6.3"
   }
 }
