--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -21,11 +21,14 @@
     "migrate": "prisma migrate deploy",
     "studio": "prisma studio"
   },
+  "prisma": {
+    "seed": "node prisma/seed.cjs"
+  },
   "dependencies": {
     "@prisma/client": "5.16.1"
   },
   "devDependencies": {
     "prisma": "5.16.1",
-    "typescript": "5.7.2"
+    "typescript": "5.6.3"
   }
 }
