--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,17 +16,24 @@
     "@oru/shared": "workspace:*",
     "@prisma/client": "5.16.1",
   "@trpc/server": "11.7.1",
-    "bull": "4.12.2",
+  "aws-sdk": "2.1692.0",
+  "bcrypt": "5.1.1",
+  "bull": "4.12.2",
     "bullmq": "5.8.3",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.19.2",
+  "handlebars": "4.7.8",
     "http-status-codes": "2.3.0",
     "ioredis": "5.4.2",
     "jsonwebtoken": "9.0.2",
+  "nodemailer": "6.9.16",
     "multer": "1.4.5-lts.1",
     "node-cron": "3.0.3",
+  "pdf-lib": "1.17.1",
+  "sharp": "0.33.3",
     "socket.io": "4.7.5",
+  "speakeasy": "2.0.0",
     "superjson": "2.2.1",
     "winston": "3.13.0",
     "zod": "3.23.8",
@@ -43,6 +50,9 @@
     "@types/jsonwebtoken": "9.0.6",
   "@types/multer": "1.4.11",
   "@types/node": "20.16.5",
+    "@types/bcrypt": "5.0.2",
+  "@types/handlebars": "4.1.0",
+    "@types/speakeasy": "2.0.7",
     "@types/node-cron": "3.0.10",
     "@types/winston": "2.4.4",
   "eslint": "9.11.1",
