--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,55 +8,66 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-  "lint": "eslint \"src/**/*.ts\"",
+    "lint": "eslint \"src/**/*.ts\"",
+    "test": "jest --runInBand",
     "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "0.27.3",
+    "@google/generative-ai": "^0.1.1",
     "@oru/database": "workspace:*",
     "@oru/shared": "workspace:*",
     "@prisma/client": "5.16.1",
-  "@trpc/server": "11.7.1",
-  "aws-sdk": "2.1692.0",
-  "bcrypt": "5.1.1",
-  "bull": "4.12.2",
+    "@tensorflow/tfjs": "4.20.0",
+    "@trpc/server": "11.7.1",
+    "aws-sdk": "2.1692.0",
+    "bcrypt": "5.1.1",
+    "bull": "4.12.2",
     "bullmq": "5.8.3",
+  "chromadb": "3.1.4",
+    "compression": "1.7.4",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.19.2",
-  "handlebars": "4.7.8",
+    "express-rate-limit": "7.4.0",
+    "groq-sdk": "0.35.0",
+    "handlebars": "4.7.8",
+    "helmet": "7.1.0",
     "http-status-codes": "2.3.0",
     "ioredis": "5.4.2",
     "jsonwebtoken": "9.0.2",
-  "nodemailer": "6.9.16",
     "multer": "1.4.5-lts.1",
     "node-cron": "3.0.3",
-  "pdf-lib": "1.17.1",
-  "sharp": "0.33.3",
-    "socket.io": "4.7.5",
-  "speakeasy": "2.0.0",
-    "superjson": "2.2.1",
-    "winston": "3.13.0",
-    "zod": "3.23.8",
-    "@tensorflow/tfjs": "4.20.0",
-    "chromadb": "1.8.1",
+    "nodemailer": "6.9.16",
     "openai": "4.70.2",
-    "@anthropic-ai/sdk": "0.27.3",
-  "@google/generative-ai": "0.24.1",
-    "groq-sdk": "0.35.0"
+    "pdf-lib": "1.17.1",
+    "sharp": "0.33.3",
+    "socket.io": "4.7.5",
+    "speakeasy": "2.0.0",
+    "superjson": "2.2.1",
+    "supertest": "7.0.0",
+    "winston": "3.13.0",
+    "zod": "3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "5.0.2",
+    "@types/compression": "^1.8.1",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
+    "@types/handlebars": "4.1.0",
+    "@types/jest": "29.5.12",
     "@types/jsonwebtoken": "9.0.6",
-  "@types/multer": "1.4.11",
-  "@types/node": "20.16.5",
-    "@types/bcrypt": "5.0.2",
-  "@types/handlebars": "4.1.0",
-    "@types/speakeasy": "2.0.7",
+    "@types/multer": "1.4.11",
+    "@types/node": "20.16.5",
     "@types/node-cron": "3.0.10",
+    "@types/speakeasy": "2.0.7",
+    "@types/supertest": "2.0.16",
     "@types/winston": "2.4.4",
-  "eslint": "9.11.1",
+    "eslint": "8.57.0",
+    "jest": "29.7.0",
+    "ts-jest": "29.2.5",
+    "ts-node": "10.9.2",
     "tsx": "4.10.0",
-    "typescript": "5.6.3"
+    "typescript": "^5.7.2"
   }
 }
