--- a/package.json
+++ b/package.json
@@ -13,24 +13,26 @@
     "lint": "turbo lint",
     "typecheck": "turbo typecheck",
     "test": "turbo test",
-  "prisma:generate": "pnpm --filter @oru/database run generate"
+    "prisma:generate": "pnpm --filter @oru/database run generate"
   },
   "devDependencies": {
-    "turbo": "2.1.0",
-  "typescript": "5.6.3",
-  "eslint": "9.11.1",
-  "@eslint/js": "9.11.1",
-  "@typescript-eslint/eslint-plugin": "8.12.1",
-  "@typescript-eslint/parser": "8.12.1",
-  "typescript-eslint": "8.12.1",
-    "prettier": "3.3.3",
+    "@eslint/js": "8.57.0",
+    "@types/node": "20.16.5",
+    "@typescript-eslint/eslint-plugin": "8.12.1",
+    "@typescript-eslint/parser": "8.12.1",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "10.1.1",
-    "@types/node": "20.16.5"
+    "prettier": "3.3.3",
+    "turbo": "2.1.0",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "8.12.1"
   },
   "pnpm": {
     "overrides": {
       "react": "18.3.1",
-      "react-dom": "18.3.1"
+      "react-dom": "18.3.1",
+      "eslint": "8.57.0",
+      "typescript": "5.7.2"
     }
   }
 }
