load dotenv for prisma and document dev auth defaults

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ MONGO_URL=mongodb://localhost:27017/oru
 # Security + identity
 JWT_SECRET=replace-me
 ENCRYPTION_KEY=replace-me
+# Dev defaults; override these for real deployments
+SUPER_ADMIN_PASSWORD_HASH=$2a$10$9OmXW/byLlTj1ZNF4RJajuHU37D8GAroVE0cXdrPQgQjJfXI0qZvW
+SUPER_ADMIN_MFA_SECRET=JBYUQRS6IFJCGQKXFJHDELTUNVUUWN3U
 
 # AI + agent services
 OPENAI_API_KEY=
