--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -25,7 +25,8 @@
     "seed": "node prisma/seed.cjs"
   },
   "dependencies": {
-    "@prisma/client": "5.16.1"
+    "@prisma/client": "5.16.1",
+    "dotenv": "16.4.5"
   },
   "devDependencies": {
     "prisma": "5.16.1",
