--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -68,6 +68,6 @@
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
     "tsx": "4.10.0",
-    "typescript": "^5.7.2"
+    "typescript": "5.6.3"
   }
 }
