--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   },
   "devDependencies": {
     "@eslint/js": "8.57.0",
-    "@types/node": "20.16.5",
+  "@types/node": "22.9.0",
     "@typescript-eslint/eslint-plugin": "8.12.1",
     "@typescript-eslint/parser": "8.12.1",
     "eslint": "8.57.0",
     "eslint-config-prettier": "10.1.1",
     "prettier": "3.3.3",
     "turbo": "2.1.0",
-    "typescript": "^5.7.2",
+  "typescript": "5.6.3",
     "typescript-eslint": "8.12.1"
   },
   "pnpm": {
@@ -32,7 +32,7 @@
       "react": "18.3.1",
       "react-dom": "18.3.1",
       "eslint": "8.57.0",
-      "typescript": "5.7.2"
+      "typescript": "5.6.3"
     }
   }
 }
