--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "9.0.2",
     "multer": "1.4.5-lts.1",
     "node-cron": "3.0.3",
+  "node-statsd": "0.1.1",
     "nodemailer": "6.9.16",
     "openai": "4.70.2",
     "pdf-lib": "1.17.1",
@@ -59,6 +60,7 @@
     "@types/jsonwebtoken": "9.0.6",
     "@types/multer": "1.4.11",
     "@types/node": "20.16.5",
+  "@types/node-statsd": "0.1.3",
     "@types/node-cron": "3.0.10",
     "@types/speakeasy": "2.0.7",
     "@types/supertest": "2.0.16",
