--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "5.51.1",
     "@tensorflow/tfjs-node": "4.21.0",
     "autoprefixer": "10.4.19",
+  "emoji-picker-react": "4.8.0",
     "bcryptjs": "2.4.3",
     "chromadb": "3.1.4",
     "class-variance-authority": "0.7.0",
