--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint \"app/**/*.{ts,tsx}\" --no-error-on-unmatched-pattern"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@oru/shared": "workspace:*",
     "@oru/ui": "workspace:*",
     "@prisma/client": "5.20.0",
@@ -17,10 +18,10 @@
     "@tanstack/react-query": "5.51.1",
     "@tensorflow/tfjs-node": "4.21.0",
     "autoprefixer": "10.4.19",
-  "emoji-picker-react": "4.8.0",
     "bcryptjs": "2.4.3",
     "chromadb": "3.1.4",
     "class-variance-authority": "0.7.0",
+    "emoji-picker-react": "4.8.0",
     "framer-motion": "11.0.24",
     "ioredis": "5.4.1",
     "jose": "5.9.3",
@@ -51,7 +52,7 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
     "@types/jsonwebtoken": "9.0.6",
-  "@types/react": "18.3.3",
+    "@types/react": "18.3.3",
     "@types/react-beautiful-dnd": "13.1.8",
     "@types/react-dom": "18.3.0",
     "@types/speakeasy": "2.0.8",
