--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "morgan": "1.10.0",
     "socket.io": "4.7.5",
     "uuid": "9.0.1",
-    "winston": "3.14.2"
+    "winston": "3.14.2",
+    "dotenv": "16.4.5"
   },
   "devDependencies": {
     "@types/compression": "1.7.5",
