--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint \"app/**/*.{ts,tsx}\" --no-error-on-unmatched-pattern"
+    "lint": "eslint \"app/**/*.{ts,tsx}\" --no-error-on-unmatched-pattern",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
@@ -58,6 +59,7 @@
     "@types/speakeasy": "2.0.8",
     "@types/uuid": "9.0.7",
     "@types/ws": "8.5.12",
+    "@playwright/test": "1.49.1",
     "babel-loader": "8.3.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
