--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "dev": "pnpm prisma generate && ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/app.js",
-    "prisma": "prisma"
+    "prisma": "prisma",
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "@prisma/client": "5.16.1",
@@ -36,8 +37,13 @@
     "@types/node": "20.11.30",
     "@types/uuid": "9.0.8",
     "@types/bcryptjs": "2.4.6",
+    "@types/jest": "29.5.12",
+    "jest": "29.7.0",
     "prisma": "5.16.1",
+    "supertest": "7.0.0",
+    "ts-jest": "29.2.5",
     "ts-node-dev": "2.0.0",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "@types/supertest": "2.0.16"
   }
 }
